--- a/user.html
+++ b/user.html
@@ -24,10 +24,14 @@
                     <br/>
                     <br/>
                     <p>Susie B Anthony</p>
-                    <p>Age: 34</p>
-                    <p>Location: Toronto</p>
-                    <p> Occupation: Bee Keeper</p>
+                    <p><strong>Age:</strong>38</p>
+                    <p><strong>Location:</strong> Toronto</p>
+                    <p> <strong>Occupation</strong> Bee Keeper</p>
                     <p> Salary: $80k/year</p>
+
+                    <br/>
+                    <br>
+                    <p> <strong>Bio:</strong> Frank's wife is also a Beekeeper and they've been married for 14 years. They have a 10 year old daughter and a 5 year old daughter. The family loves traveling together. They like to take a long trip over the summer, and a short one for spring break.</p>
                 </div>
                 <ul class="nav flex-column">
                     <li class="nav-item">
