--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="./user.html">
                                 <i class="fa-solid fa-user-group"></i>
                             </a>
                         </li>
@@ -159,7 +159,7 @@
                                         <td>(123) 456-7890</td>
                                         <td>john@example.com</td>
                                         <td>New York</td>
-                                        <td><a href="#">Details</a></td>
+                                        <td><a href="./user.html">Details</a></td>
                                     </tr>
                                     <tbody>
                                         <tr>
@@ -168,7 +168,7 @@
                                             <td>(123) 456-7890</td>
                                             <td>john@example.com</td>
                                             <td>New York</td>
-                                            <td><a href="#">Details</a></td>
+                                            <td><a href="./user.html">Details</a></td>
                                         </tr> 
                                         <tbody>
                                             <tr>
@@ -177,7 +177,7 @@
                                                 <td>(123) 456-7890</td>
                                                 <td>john@example.com</td>
                                                 <td>New York</td>
-                                                <td><a href="#">Details</a></td>
+                                                <td><a href="./user.html">Details</a></td>
                                             </tr>
                                             <tbody>
                                                 <tr>
@@ -186,7 +186,7 @@
                                                     <td>(123) 456-7890</td>
                                                     <td>john@example.com</td>
                                                     <td>New York</td>
-                                                    <td><a href="#">Details</a></td>
+                                                    <td><a href="./user.html">Details</a></td>
                                                 </tr>
                                                 <tbody>
                                                     <tr>
@@ -195,7 +195,7 @@
                                                         <td>(123) 456-7890</td>
                                                         <td>john@example.com</td>
                                                         <td>New York</td>
-                                                        <td><a href="#">Details</a></td>
+                                                        <td><a href="./user.html">Details</a></td>
                                                     </tr>
                                 </tbody>
                             </table>
