fixing broken img link for github pages

--- a/user.html
+++ b/user.html
@@ -20,7 +20,7 @@
             <!-------------------------- Sidebar ---------------------------------------->
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
                 <div class="sidebar-header">
-                    <img src="/young-woman-profile-vector-14770253.jpg" height="200px" width="200px">
+                    <img src="./young-woman-profile-vector-14770253.jpg" height="200px" width="200px">
                     <br/>
                     <br/>
                     <p>Susie B Anthony</p>
