--- a/user.html
+++ b/user.html
@@ -46,7 +46,7 @@
             <main role="main" class="col-md-10 ml-sm-auto px-5">
                 <!-- Header -->
                 <header class="d-flex justify-content-between align-items-center py-3 mb-4 border-bottom">
-                    <h1 class="h4 mb-0">Home/User/User Profile</h1>
+                    <h1 class="h4 mb-0"><a href="./index.html">Home</a>/User/User Profile</h1>
 
                     <a class="nav-link active" href="#"><i class="fa-regular fa-bell" id="bell"></i></a>
 
